add user/tasks repositories with user/tasks services and configurate handlers
