# openapi/openapi.yaml
@@ -5,12 +5,20 @@ info:
 paths:
   /tasks:
     get:
-      summary: Get all tasks
+      summary: Get all tasks for a specific user
       tags:
         - tasks
+      parameters:
+        - name: user_id
+          in: query
+          description: The ID of the user
+          required: true
+          schema:
+            type: integer
+            format: int64
       responses:
         '200':
-          description: A list of tasks
+          description: A list of tasks for the specified user
           content:
             application/json:
               schema:
@@ -30,24 +38,23 @@ paths:
               $ref: '#/components/schemas/Task'
       responses:
         '201':
-          description: The created task
+          description: The created task ID
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Task'
-  /tasks/{id}:
-    parameters:
-      - name: id
-        in: path
-        description: The ID of the task
-        required: true
-        schema:
-          type: integer
-          format: uint
+                $ref: '#/components/schemas/IdResponse'
     patch:
-      summary: Updating an existing task
+      summary: Update an existing task
       tags:
         - tasks
+      parameters:
+        - name: id
+          in: query
+          description: The ID of the task
+          required: true
+          schema:
+            type: integer
+            format: int64
       requestBody:
         description: The task to update
         required: true
@@ -56,21 +63,36 @@ paths:
             schema:
               $ref: '#/components/schemas/Task'
       responses:
-        '201':
+        '200':
           description: The updated task
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Task'
     delete:
-      summary: Deleting an existing task by Id
+      summary: Delete an existing task by Id
       tags:
         - tasks
+      parameters:
+        - name: id
+          in: query
+          description: The ID of the task
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - name: user_id
+          in: query
+          description: The ID of the user
+          required: true
+          schema:
+            type: integer
+            format: int64
       responses:
         '204':
           description: The task was successfully deleted
 
-  /user:
+  /users:
     post:
       summary: Create a new user
       tags:
@@ -84,39 +106,23 @@ paths:
               $ref: '#/components/schemas/User'
       responses:
         '201':
-          description: The created user
+          description: The created user ID
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
-
-    get:
-      summary: Get all users
+                $ref: '#/components/schemas/IdResponse'
+    patch:
+      summary: Update an existing user
       tags:
         - users
-      responses:
-        '200':
-          description: A list of users
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/User'
-
-  /users/{id}:
-    parameters:
-      - name: id
-        in: path
-        description: The ID of the user
-        required: true
-        schema:
-          type: integer
-          format: uint
-    patch:
-      summary: Updating an existing user
-      tags:
-        - tasks
+      parameters:
+        - name: id
+          in: query
+          description: The ID of the user
+          required: true
+          schema:
+            type: integer
+            format: int64
       requestBody:
         description: The user to update
         required: true
@@ -125,16 +131,24 @@ paths:
             schema:
               $ref: '#/components/schemas/User'
       responses:
-        '201':
+        '200':
           description: The updated user
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
     delete:
-      summary: Deleting an existing user by Id
+      summary: Delete an existing user by Id
       tags:
-        - tasks
+        - users
+      parameters:
+        - name: id
+          in: query
+          description: The ID of the user
+          required: true
+          schema:
+            type: integer
+            format: int64
       responses:
         '204':
           description: The user was successfully deleted
@@ -165,3 +179,10 @@ components:
           type: string
         password:
           type: string
+
+    IdResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
